--- a/main.css
+++ b/main.css
@@ -1,20 +1,21 @@
 /** EXAMPLE **/
 html{
-    height: 100vh;
+
     width: 100vw;
     margin: 0;
     padding: 0;
 }
 body{
     margin: 0;
-    padding: 0;
-    height: 100vh;
+    padding: 10px;
+    box-sizing: border-box;
+    min-height: 100vh;
     max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: monospace;
+    font-family: 'Courier New', Courier, monospace;
     font-weight:bold;
     font-size: 30px;
 }
@@ -40,4 +41,53 @@ body{
     font-size: 20px;
     text-align: center;
     margin: 0 10px;
+}
+
+.setting-panel{
+    background-color: #E5EBFF;
+    min-width: 30%;
+    height: max-content;
+    padding: 20px;
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;;
+}
+
+.setting-group{
+    margin-bottom: 20px;
+}
+button{
+    background-color: lightcoral;
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: bold;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    outline: none;
+}
+
+input{
+    background-color: transparent;
+    border: none;
+    width: max-content;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+pre{
+    font-size: 13px;
+    color: lightcoral;
+    font-weight: bold;
+    cursor: default;
+    font-family: "Consolas";
+}
+
+pre span{
+    display: block;
+    line-height: 1.5rem;
+    counter-increment: line;
 }
